--- a/src/asset/styles/components/Search.scss
+++ b/src/asset/styles/components/Search.scss
@@ -6,7 +6,9 @@
     height: 300px;
     border-radius: 0px 0px 40px 40px;
   }
-  
+  .main .isHome{
+    width: 70%;
+  }
   .main__title {
     color: white;
     font-size: 25px;
@@ -22,6 +24,5 @@
     margin-bottom: 20px;
     outline: none;
     padding: 0px 20px;
-    width: 70%;
   }
   
